--- a/main.html
+++ b/main.html
@@ -1,6 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <body>
-        <h1>あああああ</h1>
-    </body>
+
+<body>
+    <h1>Hello World</h1>
+    <p>I'm hosted with GitHub Pages.</p>
+</body>
+
 </html>
