--- a/main.html
+++ b/main.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-
+    <head>
+        <title>Butter|about</title>
+        <meta charset="UTF-8">
+        <meta lang="ja">
+    </head>
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
 </body>
-
 </html>
