CSS読込の実装

--- a/main.html
+++ b/main.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Butter|about</title>
-        <meta charset="UTF-8">
-        <meta lang="ja">
-    </head>
+
+<head>
+    <title>Butter|about</title>
+    <meta charset="UTF-8">
+    <meta lang="ja">
+    <link rel="stylesheet" href="main.css" type="text/css">
+</head>
 <body>
+    
 </body>
+
 </html>
